@@ -8,15 +8,15 @@ This project is guided by a strong philosophical vision for what a modern effect
 
 ## Status
 
-**Current Development Status (August 2025)**: The core synchronous kernel and concurrent runtime are complete and have been validated against our primary goals from the Manifesto.
+**Current Development Status (August 2025)**: The core synchronous kernel is complete and validated against our primary goals from the Manifesto.
 
 - **Correctness Foundation**: 156/156 tests passing, with a zero-casting runtime implementation enforced by the build linter.
 
 - **Performance**: Includes construction-time fusion for pure flatMap chains, resulting in performance for pure computations that is competitive with hand-optimized map chains (~196k ops/ms, depth 1000).
 
-- **Concurrent Runtime**: A complete fiber-based asynchronous runtime with structured concurrency is implemented.
+- **Runtime Status**: Sequential “concurrency‑lite” today (zipPar sequential, race deterministic) to preserve a simple, portable core. True concurrency on JVM via Java Virtual Threads (JDK 21+) is the immediate next milestone; optional integration with JDK 25 Structured Concurrency is planned behind preview flags with automatic fallback.
 
-- **Platform Support**: Full support for JVM and Scala Native.
+- **Platform Support**: JVM fully supported. Scala Native supports the synchronous core and sequential runtime today; true concurrency on Native is deferred (Native has multithreading but no Virtual Threads).
 
 ## License
 
@@ -26,7 +26,7 @@ Eru is licensed under the MIT License. See the LICENSE file for details.
 
 Start here for the synchronous core and pure composition patterns:
 
-- **Eru Quickstart — Synchronous Core**: quickstart.md
+- **Eru Quickstart — Synchronous Core**: QUICKSTART.md
 
 ## Development Playbook
 
@@ -35,34 +35,33 @@ For the point-by-point execution plan aligned with our Manifesto and guidelines,
 - **Eru Development Playbook — Point-by-Point Plan**: PLAYBOOK.md
 
 ## Concurrent Runtime
+Current state: sequential “concurrency‑lite.”
 
-The runtime is a complete fiber-based concurrency model with a structured programming interface.
+- On JVM today: zipPar is sequential and race is deterministic (left-biased) to preserve portability and simplicity of the synchronous core.
+- Next milestone: true concurrency on JVM via Java Virtual Threads (JDK 21+). When running on JDK 25 with `--enable-preview`, Eru may internally integrate Structured Concurrency (StructuredTaskScope) with automatic fallback to the VT backend.
+- Scala Native: supports the synchronous core and a sequential runtime for now (Native has multithreading but no Virtual Threads). True concurrency on Native is deferred and will be reassessed after the JVM runtime stabilizes.
 
-### Runtime Architecture
+### Architecture
 
-- **eru-core**: The pure, synchronous kernel.
+- **eru-core**: Pure, synchronous kernel (sealed ADT, zero casts, TailRec interpreter).
+- **eru-runtime**: Portability-first runtime with concurrency conveniences (fork facade, zipPar, race, timeouts, retries). A JVM concurrent backend on Virtual Threads is planned.
 
-- **eru-runtime**: The concurrent runtime with fibers, structured concurrency, and cooperative scheduling.
+### Notes
 
-### Key Features
+- Resource safety: patterns like `.ensure` and `bracket` are guaranteed today.
+- Observability: `EruObserver` provides ProgramStart/End and Step events; fiber events will be added with the concurrent runtime.
 
-- **Fiber Management**: Fork/await, interruption, and lifecycle management.
-
-- **Structured Concurrency**: race, zipPar, and principled resource cleanup.
-
-- **Resource Safety**: Automatic cleanup patterns like `.autoClose` and `.ensure`.
-
-For technical details, see the design document: design/async.md
+For status and roadmap, see IMMEDIATE_ACTION.md (sections D and H).
 
 ## Guides
 
-- **Quickstart — Synchronous Core and Pure Composition**: quickstart.md
+- **Quickstart — Synchronous Core and Pure Composition**: QUICKSTART.md
 
-- **Resource Safety — Patterns with .ensure and .autoClose**: resources.md
+- **Resource Safety — Patterns with .ensure and .autoClose**: RESOURCES.md
 
-- **Concurrency — Fibers and structured concurrency**: concurrency.md
+- **Concurrency — Fibers and structured concurrency**: CONCURRENCY.md
 
-- **Observability — EruObserver and debugging**: observer.md
+- **Observability — EruObserver and debugging**: OBSERVER.md
 
 ## Public API Spec — Executable
 
